# taxi_demand_service

./: .env.example  .gitignore  README.md  app.py  hello.py  main_dwh.py  pyproject.toml
models/: baseline_model.pkl
notebooks/: 01_load_and_validate_raw_data.ipynb  02_exploratory_data_analysis.ipynb  02_transform_data_into_ts.ipynb  03_baseline_model.ipynb  04_inference_pipeline.ipynb  notebook_utils.py
src/: cli.py  common.py  config.py  data.py  dwh.py  feature_engineering.py  features.py  inference.py  logger.py  paths.py  pipeline.py  plots.py  setup_dwh.py  train.py  training.py
src/adapters/: base.py  duck_repo.py  local_repo.py
src/etl/: constants.py  data.py  dwh.py  helpers.py  models.py  pipeline.py  transform.py
src/interfaces/: cli.py
src/mean_lag_model/: config.py  inference.py  pipeline.py  train.py
src/model/: config.py  inference.py  pipeline.py  train.py
src/repository/: base.py  duck_repo.py  local_repo.py
tests/: test_etl.py  test_mean_lag_model.py
tests/adapters/: test_duck_repo.py  test_local_repository.py
tests/repository/: test_duck_repo.py  test_local_repository.py
tests/test_adapters/: test_duck_repo.py  test_local_repository.py
