[project]
name = "taxi-demand-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.3",
    "joblib>=1.4.2",
    "nbformat>=4.2.0",
    "plotly>=5.24.1",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
