[project]
name = "taxi-demand-predictor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.1.3",
    "joblib>=1.4.2",
    "metaflow>=2.12.33",
    "mlflow>=2.18.0",
    "mlforecast>=1.0.2",
    "nbformat>=4.2.0",
    "numpy==2.1",
    "plotly>=5.24.1",
    "polars>=1.16.0",
    "pyarrow>=18.1.0",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "skforecast>=0.14.0",
    "statsforecast>=2.0.1",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
    "utilsforecast>=0.2.11",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.9.3",
    "pytest>=8.3.4",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
]
